--- a/templates/base.html
+++ b/templates/base.html
@@ -14,17 +14,17 @@
         <tr>
             <td>
                 <a href="{{url_for('index')}}">
-                    <input type="button" class="nav-button" value="Home">
+                    Home
                 </a>
             </td>
             <td>
                 <a href="{{url_for('about')}}">
-                    <input type="button" class="nav-button" value="About">
+                    About
                 </a>
             </td>
             <td>
                 <a href="{{url_for('rp_calc')}}">
-                    <input type="button" class="nav-button" value="RP Calculator">
+                    RP Calculator
                 </a>
             </td>
         </tr>
