--- a/templates/rp_calc.html
+++ b/templates/rp_calc.html
@@ -31,6 +31,14 @@
 {% else %}
 <form action="{{url_for('rp_display')}}" method="POST">
     <table>
+        <tr>
+            <th align="left">
+                Subject
+            </th>
+            <th align="left">
+                Grade
+            </th>
+        </tr>
         {% for i in range(no_of_subj) %}
         <tr>
             <td>
@@ -50,7 +58,9 @@
         </tr>
         {% endfor %}
     </table>
+    <br>
     <input type="submit" value="Calculate!">
+
 </form>
 {% endif %}
 
