splited rp_calc into 2 html pages

--- a/templates/rp_display.html
+++ b/templates/rp_display.html
@@ -21,11 +21,11 @@
     </tr>
     {% endfor %}
     <tr>
-        <td>Total</td>
+        <th align="left">Total</th>
         <td></td>
-        <td align="right">
+        <th align="right">
             {{"{0:.2f}".format(rp)}} / {{"{0:.2f}".format(total_rp)}}
-        </td>
+        </th>
     </tr>
 </table>
 {% endblock %}
